# linkerfs-warp-gen-oatpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
linkerfs/: CMakeLists.txt
src/: App.cpp  AppComponent.hpp  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  OptionParser.cpp  OptionParser.hpp  SwaggerComponent.hpp
src/common/: StaticResource.cpp  StaticResource.hpp
src/common/utils/: File.cpp  File.hpp  UDF.cpp  UDF.hpp  Warp.cpp  Warp.hpp
src/common/wrapper/: WarpConfigWrapper.cpp  WarpConfigWrapper.hpp  WarpFileWrapper.cpp  WarpFileWrapper.hpp
src/controller/: DirController.hpp  FileController.hpp  StaticController.hpp  SwaggerController.hpp  WarpController.hpp  WebuiController.hpp
src/dto/: DirDto.hpp  DirInfo.hpp  EmptyDto.hpp  FileInfo.hpp  ResponseDto.hpp
src/dto/common/: DirInfo.hpp  DirInfoDto.hpp  DocDtoMacro.hpp  DocExampleDtos.hpp  FileInfo.hpp  FileInfoDto.hpp  FileNodeDto.hpp  UdfWarpTargetDto.hpp  WarpConfigDto.hpp  WarpTargetDto.hpp
src/dto/request/: CreateUdfWarpReqDto.hpp  CreateWarpReqDto.hpp  ListDirReq.hpp  ListDirReqDto.hpp  ListUDFReqDto.hpp
src/dto/response/: CreateWarpRespDto.hpp  ListDirResp.hpp  ListDirRespDto.hpp  ListUDFRespDto.hpp  ResponseDto.hpp
src/i18n/: zh-cn.ts
src/service/: AbstractService.hpp  DirService.cpp  DirService.hpp  FileService.cpp  FileService.hpp  UDFService.cpp  UDFService.hpp  UdfService.cpp  UdfService.hpp  WarpService.cpp  WarpService.hpp
