cmake_minimum_required(VERSION 3.21)
project(linkerfs_warp_gen_oatpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(BUILD_SHARED_LIBS OFF)
if (NOT ${BUILD_SHARED_LIBS})
    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -static)
endif ()
add_subdirectory(linkerfs)
add_subdirectory(3rd)
add_subdirectory(src)